Fix tags not showing on related article cards

--- a/src/app/styles/article.css
+++ b/src/app/styles/article.css
@@ -8,6 +8,10 @@
   margin: 1rem auto;
 }
 
+#articleContent img {
+  border-radius: 1rem;
+}
+
 
 @layer components {
 
